@@ -58,6 +58,7 @@ DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
       Makefile.in: Update the .c.o build rule (Remove hacks for old SunOS 4).
       CMake: Skip snprintf(3) tests when cross-compiling.
       autogen.sh: Allow to configure Autoconf warnings.
+      autogen.sh: Delete all trailing blank lines at end of configure.
     Hurd:
       Support network capture devices too.
       Fix a few device activation bugs.
